perl (5.10.1-7) UNRELEASED; urgency=low

  * 

 -- Niko Tyni <ntyni@debian.org>  Thu, 29 Oct 2009 21:13:00 +0200

perl (5.10.1-6) unstable; urgency=high

  * Added /me to Uploaders.
  * Apply upstream fix to resolve some crash in pattern matching against
    non-Unicode tainted string. This fixes CVE-2009-3626. (Closes: #552291)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 22 Oct 2009 23:21:24 +0300

perl (5.10.1-5) unstable; urgency=low

  * Make DynaLoader work without Config_heavy.pl again. (Closes: #549170)

 -- Niko Tyni <ntyni@debian.org>  Thu, 01 Oct 2009 10:52:33 +0300

perl (5.10.1-4) unstable; urgency=low

  * Temporarily work around an internal compiler error in Devel::PPPort
    on ia64+gcc-4.3. (Closes: #548943)

 -- Niko Tyni <ntyni@debian.org>  Tue, 29 Sep 2009 22:28:23 +0300

perl (5.10.1-3) unstable; urgency=low

  * Upload to unstable.

 -- Niko Tyni <ntyni@debian.org>  Fri, 25 Sep 2009 21:47:47 +0300

perl (5.10.1-2) experimental; urgency=low

  * reinstate Debian change to ExtUtils::MakeMaker for now to allow
    overriding PREFIX at installation time again. (Closes: #545904)
  * Separate Archive::Tar instance error strings from each other.
    (Closes: #539355)
  * Fix a crash with \G on first match. (Closes: #545234)

 -- Niko Tyni <ntyni@debian.org>  Tue, 15 Sep 2009 21:23:45 +0300

perl (5.10.1-1) experimental; urgency=low

  * New upstream release.
  * Remove traces of libcpan-plus-perl provides/conflicts/replaces in favour
    of libcpanplus-perl.
  * Clean an accidentally duplicated libcpanplus-perl conflict entry.
  * Add conflicts/replaces/provides for
    + libio-compress-bzip2-perl
  * Don't test .ph file syntax when DEB_BUILD_OPTIONS contains "nocheck"
    or "x-perl-notest"
  * Replace /usr/share/doc symlinks with separate changelog and copyright
    files in the arch-independent packages (perl-doc and perl-modules)
    to make sure they correspond to the right package version.
    (Closes: #536384, #542137)