@@ -394,6 +394,11 @@ endif
 	    ! test -f $(build)/$$p/DEBIAN/shlibs || chmod 644 $(build)/$$p/DEBIAN/shlibs; \
 	    (cd $(build)/$$p; find usr -type f -print | xargs -r md5sum) \
 		>$(build)/$$p/DEBIAN/md5sums; \
+	done
+	# dpkg-shlibdeps needs to be run only after all the shlibs are present
+	for p in `./perl.static -l -00ne 'print $$1 if /^Architecture:\s+any/m \
+	    and /^Package:\s+(.*)/m' debian/control`; \
+	do \
 	    find $(build)/$$p/usr -type f \
 		\( -perm +111 -o -name \*.so\* \) -print | \
 		fgrep -v /usr/lib/debug/ | \
